src/objects/PaymentTerm__c.object
<CustomObject>
    <fields>
        <fullName>Business_Type__c</fullName>
        <label>Business Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Business_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>EntityID__c</fullName>
        <label>Entity ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>DAZN Payment Term</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ProductTerm Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DAZN Payment Term</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>